# ble-sensor-node

./: .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
.github/workflows/: ci.yml
app/src/: main.c  main.cpp
app/src/aht10/: aht10.hpp
app/src/ble/: CMakeLists.txt  aht10_service.cpp  aht10_service.hpp  ble.cpp  ble.hpp  characteristic.hpp  service.hpp
app/src/led/: led.hpp
app/src/lvgl_wrappers/: CMakeLists.txt  lvgl_port.cpp  lvgl_port.hpp  screens.cpp  screens.hpp
app/src/lvgl_wrappers/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
app/src/lvgl_wrappers/ui/components/: ui_comp_hook.c
app/src/lvgl_wrappers/ui/fonts/: ui_font_Nunito20.c  ui_font_Nunito28.c
app/src/lvgl_wrappers/ui/images/: ui_img_bg_main_png.c  ui_img_icon_humidity_png.c  ui_img_icon_temperature_png.c
app/src/lvgl_wrappers/ui/screens/: ui_scrBLE.c  ui_scrBLE.h
app/src/zephyr_wrappers/: thread.hpp
boards/: nrf5340dk_nrf5340_cpuapp.overlay
module_drivers/aht10/: CMakeLists.txt  README.md
module_drivers/aht10/drivers/: CMakeLists.txt  Kconfig
module_drivers/aht10/drivers/src/: CMakeLists.txt  Kconfig  aht10.c
module_drivers/aht10/dts/bindings/: aht10.yaml
module_drivers/aht10/include/: aht10.h
module_drivers/aht10/zephyr/: module.yml
